<resources>
    <string name="app_name">QRCode</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile">Mobile :</string>
    <string name="customer">Name :</string>
    <string name="otp">Enter OTP</string>
    <string name="powered_by">Powered By LBIT</string>
    <string name="search_part">Search OE Part # / Description</string>
    <string name="make">Make</string>
    <string name="vehicle">Vehicle</string>
    <string name="part_category">Part Category</string>
    <string name="part_desc">Part Description</string>
    <string name="reg_no">Registration No.</string>
    <string name="part_no">Part Number</string>
    <string name="available_qty">Available Qty</string>
    <string name="jobcard_vehicledetails">Vehicle Details</string>
    <string name="jobcard_customerdetails">Customer Details</string>
    <string name="jobcard_workshopdetails">Workshop Details</string>
    <string name="name">Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="employesId">Employee ID</string>
    <string name="manger">Manager</string>
    <string name="designation">Designation</string>
    <string name="profile_signup">Sign Up</string>
    <string name="brand">Brand</string>
    <string name="branch">Branch</string>
    <string name="department">Department</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="add_vendor">Add Vendor</string>
    <string name="add_job">Add Job</string>
    <string name="job_notes">Job Notes</string>
    <string name="add_service">Add Service</string>
    <string name="add_spare">Add Spare</string>
    <string name="preview">Preview</string>
    <string name="preview_invoice">Preview Invoice</string>
    <string name="preview_text">Please review the Proforma before generating the Invoice</string>
    <string name="vehicle_reg">Registation Number</string>
    <string name="model">Model</string>
    <string name="variant">Variant</string>
    <string name="kms_driven">KMS Driven</string>
    <string name="number_plat_color">Number Plt Colour</string>
    <string name="mfg">MFG</string>
    <string name="engine_no">Engine No</string>
    <string name="chassis_no">Chassis No</string>
    <string name="insurance">Insurance</string>
    <string name="in_charge">Incharge</string>
    <string name="in_charge_mobile">Incharge Mobile</string>
    <string name="driver">Driver</string>
    <string name="driver_mobile">Driver Mobile</string>
    <string name="vehcile_search">Search Mobile #</string>
    <string name="search_vendor">Search Vendor</string>
    <string name="search_jobid">Search JobCard</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">pincode</string>
    <string name="CRN">CRN</string>
    <string name="payment_type">Payment Type</string>
    <string name="gst">GST Applicable</string>
    <string name="gstin">GSTIN</string>
    <string name="technician">Technician</string>
    <string name="supervisor">Supervisor</string>
    <string name="supervisor_mobile">Supervisor Mobile</string>
    <string name="job_category">Job Category</string>
    <string name="job">Job</string>
    <string name="gatepass_jobcard">JobCard</string>
    <string name="gatepass_counter">Counter Sale</string>
    <string name="gatepass_type">Gatepass Type</string>
    <string name="job_id">Job ID</string>
    <string name="scan_status">Scan Status</string>
    <string name="source">Source</string>
    <string name="cust_notes">Customer Notes</string>
    <string name="workshop_notes">Workshop Notes</string>
    <string name="notes">Notes</string>
    <string name="job_card_no">Job Card No.</string>
    <string name="job_card_date">Job Card Date</string>
    <string name="job_card_status">JobCard Status</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="vendor_id">Vendor ID</string>
    <string name="total_amount">Total Amount</string>
    <string name="gatepass_no">GatePass No</string>
    <string name="gatepass_date">GatePass Date</string>
    <string name="gatepass_status">GatePass Status</string>
    <string name="gatepass_Auth_status">GatePass Auth Status</string>
    <string name="select_service">Service</string>
    <string name="jobcard_number">Jobcard Number</string>
    <string name="crn_no">CRN No.</string>
    <string name="hours">Hours</string>
    <string name="cost">Cost</string>
    <string name="discount">Discount(%)</string>
    <string name="discount1">Discount</string>
    <string name="final_price">Final Price</string>
    <string name="action">Action</string>
    <string name="spares_added_details">Spares Added Details</string>
    <string name="service_added_details">Service Added Details</string>
    <string name="qr_scanning">QR Scanning</string>
    <string name="qr_request">Requests</string>
    <string name="qr_live">Live</string>
    <string name="qr_history">History</string>
    <string name="qr_pps_part_number">PPS Part Number</string>
    <string name="pps_part_no">PPS Part No</string>
    <string name="pps_part">PPS Part #</string>
    <string name="grn_number">GRN Number</string>
    <string name="qr_oe_part_number">OE Part Number</string>
    <string name="qr_part_desc">Part Description</string>
    <string name="gate_pass">Gate Pass</string>
    <string name="qr_quantity">Quantity</string>
    <string name="qr_mrp">MRP</string>
    <string name="tax">Tax</string>
    <string name="qr_storageBin">Storage BIN</string>
    <string name="hsn">HSN</string>
    <string name="qr_supplier">Supplier</string>
    <string name="qr_counter_location">Counter Location</string>
    <string name="location">Location</string>
    <string name="select">Select</string>
    <string name="no_data">No Data Found</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="generate_estimate">Generate Estimate</string>
    <string name="edit">Edit</string>
    <string name="delet">Delete</string>
    <string name="type_here">Type here</string>
    <string name="back">Back</string>
    <string name="scan_code">Scan QR</string>
    <string name="manual_code">Manual QR</string>
    <string name="SENDER_ID">92172261968</string>
    <string name="default_notification_channel_id" translatable="false">br_default_channel</string>
    <string name="notifications_admin_channel_name">QR Test</string>
    <string name="notifications_admin_channel_description">Notification</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dateofjoining">Date of Joining</string>
    <string name="editprofile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="confirm_button">Confirm</string>
    <string name="customertype">Customer Type</string>
    <string name="profile_edit">Edit Profile</string>
    <string-array name="customer_array">
        <item>Corporate(Individual)</item>
        <item>Individual</item>
        <item>Government</item>
        <item>Corporate(Company)</item>
        <item>Fleet(Individual)</item>
        <item>Fleet(Company)</item>
    </string-array>
    <string-array name="number_plat_colour_array">
        <item>Select</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Black</item>
    </string-array>
    <string-array name="insurance_array">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="gst_array">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="payment_type_array">
        <item>Select</item>
        <item>Cash</item>
        <item>Credit</item>
    </string-array>
    <string name="hint_asteric">Legal name <font color='#FF0000'>*</font></string>
    <string-array name="location_array">
        <item>Select</item>
        <item>shamshabad</item>
        <item>Peddamberpet</item>
    </string-array>
    <string-array name="job_category_array">
        <item>Select</item>
        <item>Hydraulic</item>
        <item>Eletrical</item>
        <item>Mechanical</item>
        <item>Accidental</item>
        <item>BreakDown</item>
    </string-array>
    <string-array name="city_array">
        <item>Select</item>
        <item>Hyderabad</item>
        <item>Bangalore</item>
        <item>Pune</item>
        <item>Nellore</item>
    </string-array>
    <string-array name="state_array">
        <item>Select</item>
        <item>Telangana</item>
        <item>Karnataka</item>
        <item>Maharashtra</item>
        <item>Andhra Pradesh</item>
    </string-array>
    <string-array name="technician_array">
        <item>Select</item>
        <item>Kalyan A</item>
        <item>Jagannadha Ramesh</item>
        <item>Azeem</item>
        <item>Narasanna Reddy</item>
        <item>Ramana Reddy</item>
    </string-array>
    <string-array name="supervisor_array">
        <item>Select</item>
        <item>Domalapally Anil</item>
        <item>Netha Sunil Kumar</item>
        <item>Harsha</item>
        <item>Rajesh</item>
        <item>MD Fazal</item>
        <item>Konda Mahesh</item>
        <item>Poreddy Naveen Reddy</item>
    </string-array>
    <string-array name="tax_array">
        <item>Select</item>
        <item>5</item>
        <item>12</item>
        <item>18</item>
        <item>28</item>
    </string-array>
    <string-array name="mfg_array">
        <item>Select</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
    </string-array>
    <string name="s_no">S No</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer1">Customer</string>
    <string name="technician_name">Technician Name</string>
    <string name="service_start_time">Service Start Time</string>
    <string name="technician_mobile">Technician Mobile</string>
    <string name="jobcard_no">JobCard No</string>
    <string name="receipt_no">Receipt No</string>
    <string name="jobcard">JobCard</string>
    <string name="reference">Reference#</string>
    <string name="invoice">Invoice#</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="invoice_no">Invoice No</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="invoice_amount">Invoice Amount</string>
    <string name="status">Status</string>
    <string name="estimate_view">Estimate View</string>
    <string name="invoice_view">Invoice View</string>
    <string name="crn">CRN</string>
    <string name="qty">Qty.</string>
    <string name="qty1">Qty</string>
    <string name="box">Box #</string>
    <string name="date">Date</string>
    <string-array name="brands_array">
        <item>Select</item>
        <item>Hyundai</item>
        <item>Jeep</item>
        <item>Jaguar</item>
    </string-array>
</resources>