<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_swipetorefresh"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_gatepassType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/_10sdp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2">

                    <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Bold
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:text="@string/gatepass_type"
                        android:textColor="@color/qr_code_bg"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RadioGroup
                        android:id="@+id/rg_typeof_gatepass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_counterSale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gatepass_counter"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                        <RadioButton
                            android:id="@+id/rb_jobcard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gatepass_jobcard"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_view_inner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:elevation="12dp"
                        android:innerRadius="0dp"
                        android:shape="ring"
                        android:thicknessRatio="1.9">

                        <LinearLayout
                            android:id="@+id/qrscanningrequest_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/qr_code_bg">


                            <TextView
                                android:id="@+id/qr_req_sno"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/s_no"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:id="@+id/qr_req_date"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/date"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:id="@+id/qr_req_custName"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1.5"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/customer_name"
                                android:textColor="@android:color/white" />


                            <TextView
                                android:id="@+id/qr_req_ref"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1.3"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/reference"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:id="@+id/qr_req_invoice"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1.3"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/invoice"
                                android:textColor="@android:color/white"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/qr_req_qty"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1.2"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/qty"
                                android:textColor="@android:color/white" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/qr_scanning_history_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ev_editext__normal_bg"/>

            <workshop.lbit.qrcode.customfonts.MyTextView_Montserrat_Regular
                android:id="@+id/tvNodata"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/no_data"
                android:textColor="@android:color/black"
                android:textSize="25sp"

                android:textStyle="normal"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>