<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_inner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:elevation="12dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundColor">


                        <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Medium
                            android:id="@+id/qr_his_sno"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/s_no"
                            android:textColor="@android:color/black" />

                        <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Medium
                            android:id="@+id/qr_his_date"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/date"
                            android:textColor="@android:color/black" />

                        <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Medium
                            android:id="@+id/qr_his_custName"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/customer_name"
                            android:textColor="@android:color/black" />


                        <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Medium
                            android:id="@+id/qr_his_ref"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.3"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/reference"
                            android:textColor="@android:color/black" />

                        <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Medium
                            android:id="@+id/qr_his_invoice"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.3"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/invoice"
                            android:textColor="@android:color/black"
                            android:visibility="gone" />

                        <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Medium
                            android:id="@+id/qr_his_jobcard"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.3"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/invoice"
                            android:textColor="@android:color/black"
                            android:visibility="gone" />

                        <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Medium
                            android:id="@+id/qr_his_qty"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/qty"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>