<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Bold
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_job"
            android:textColor="@color/qr_code_bg"
            android:textSize="@dimen/_20sdp" />


        <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Bold
            android:id="@+id/bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/icon_close" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical"
        android:background="@color/db_box_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Bold
                android:id="@+id/tv_jobcategory_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_category"
                android:textColor="@color/qr_code_bg"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border_bg">

                <Spinner
                    android:id="@+id/sp_jobs_jobCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/job_category_array"
                    android:padding="@dimen/_10sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Bold
                android:id="@+id/tv_job_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job"
                android:textColor="@color/qr_code_bg"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border_bg">

                <Spinner
                    android:id="@+id/sp_jobs_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Bold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_id"
                android:textColor="@color/qr_code_bg"
                android:textSize="@dimen/_15sdp" />

            <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Medium
                android:id="@+id/tv_jobs_jobId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border_bg"
                android:imeOptions="actionDone"
                android:padding="@dimen/_10sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Bold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cust_notes"
                android:textColor="@color/qr_code_bg"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/et_jobs_customer_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border_bg"
                android:imeOptions="actionDone"
                android:inputType="textImeMultiLine"
                android:hint="@string/type_here"
                android:padding="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Bold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workshop_notes"
                android:textColor="@color/qr_code_bg"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/et_jobs_wrokshop_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/border_bg"
                android:imeOptions="actionDone"
                android:inputType="textImeMultiLine"
                android:hint="@string/type_here"
                android:padding="@dimen/_10sdp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_15sdp">

        <workshop.lbit.qrcode.customfonts.MyTextView_Roboto_Bold
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_bg"
            android:paddingLeft="@dimen/_30sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingRight="@dimen/_30sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>


</LinearLayout>